Fix `co init`, update documentation

--- a/www/src/components/DocsNav.astro
+++ b/www/src/components/DocsNav.astro
@@ -28,7 +28,7 @@ function showSubPage(url) {
 }
 
 .a {
-  color: $color__Black;
+  color: $color__black;
   display: flex;
   padding: 0.5rem 1rem;
   position: relative;
@@ -72,7 +72,7 @@ function showSubPage(url) {
 
 body.top-blue {
   .a {
-    color: $color__White;
+    color: $color__white;
   }
 }
 </style>
