--- a/www/src/styles/_fonts.scss
+++ b/www/src/styles/_fonts.scss
@@ -2,7 +2,7 @@
 @use '../../tokens/' as *;
 
 @font-face {
-  font-family: $font__family__neue_montreal;
+  font-family: 'Neue Montreal';
   font-weight: 1 999;
   src: url('https://drewhost.s3.amazonaws.com/PPNeueMontrealVariable.ttf') format('truetype');
 }
