--- a/www/src/styles/_md.scss
+++ b/www/src/styles/_md.scss
@@ -59,7 +59,7 @@
   }
 
   code {
-    background: rgba($color__Black, 0.05);
+    background: rgba($color__black, 0.05);
     border-radius: 4px;
     display: inline-block;
     padding: 0.125em 0.375em;
@@ -67,7 +67,7 @@
   }
 
   figure {
-    background: rgba($color__Black, 0.05);
+    background: rgba($color__black, 0.05);
     margin: 2.5rem 0;
     padding: 1.5rem;
   }
@@ -79,9 +79,9 @@
   }
 
   pre {
-    background: $color__Black;
+    background: $color__black;
     border-radius: 0.5rem;
-    color: $color__White;
+    color: $color__white;
     font-size: 10pt;
     margin: 1.5rem 0;
     max-width: 100%;
@@ -104,7 +104,7 @@
 
   th,
   td {
-    border-color: adjust-color($color: $color__Black, $saturation: -50%, $lightness: 75%);
+    border-color: adjust-color($color: $color__black, $saturation: -50%, $lightness: 75%);
     border-style: solid;
     border-width: 1px 0 0 1px;
     padding: 0.5rem 0.75rem;
@@ -121,7 +121,7 @@
 
   tr {
     &:nth-of-type(even) {
-      background-color: adjust-color($color: $color__Black, $saturation: -50%, $lightness: 86%);
+      background-color: adjust-color($color: $color__black, $saturation: -50%, $lightness: 86%);
     }
 
     &:last-of-type td {
