--- a/packages/plugin-sass/test/fixtures/color/want.scss
+++ b/packages/plugin-sass/test/fixtures/color/want.scss
@@ -3,7 +3,7 @@
 $color__green: #00ff00;
 $gradient__g-b: #00ff00, #0000ff 100%;
 $-cobalt_token_modes: (
-  $color__green: (
+  color__green: (
     "light": #6fdd8b,
     "dark": #56d364,
   ),
