--- a/www/src/styles/_base.scss
+++ b/www/src/styles/_base.scss
@@ -117,6 +117,6 @@ code {
 
 pre,
 code {
-  font-family: 'SF Mono', 'Menlo', monospace;
+  font-family: 'SF Mono', 'Menlo', ui-monospace, 'Cascadia Mono', 'Cascadia Code', monospace;
   line-height: 1.5;
 }
