--- a/www/src/components/DocsPagination.astro
+++ b/www/src/components/DocsPagination.astro
@@ -26,7 +26,7 @@ for (let n = 0; n < pages.pages.length; n++) {
 
 .prev,
 .next {
-  border: 1px solid $color__blue;
+  border: 1px solid token("color.blue");
   position: relative;
   text-decoration: none;
   padding: 1.25rem;
