--- a/www/src/components/Nav.astro
+++ b/www/src/components/Nav.astro
@@ -60,12 +60,12 @@ let { title = 'Cobalt' } = Astro.props;
 
   body.page--home {
     .grid {
-      background: $color__blue;
+      background: token("color.blue");
     }
 
     .title,
     .a {
-      color: $color__white;
+      color: token("color.white");
     }
   }
 </style>
