--- a/www/tokens/index.scss
+++ b/www/tokens/index.scss
@@ -1,80 +1,133 @@
 @use "sass:map";
 
-$color__black: #00193f;
-$color__blue: #2b3faa;
-$color__dark-gray: #282a37;
-$color__green: #77cd8f;
-$color__purple: #6a35d9;
-$color__red: #f6566a;
-$color__white: #ffffff;
-$gradient__red: #d0323a, #fd8d4e 100%;
-$typography__heading-1: regular 500 36px/1 "PP Neue Montreal";
-$typography__heading-2: regular 500 28px/1 "PP Neue Montreal";
-$typography__heading-3: regular 500 24px/1 "PP Neue Montreal";
-$typography__body: regular 400 16px/1 "PP Neue Montreal";
-$icon__crop: url('image/svg+xml;utf8,<svg width="30" height="30" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.36 30h-.72v-2.64H0v-.72h2.64V24h.72v2.64H6v.721H3.36V30ZM25 27.36H9v-.72h16c.904 0 1.64-.735 1.64-1.64V9h.721v16A2.363 2.363 0 0 1 25 27.36ZM3.36 21h-.72V5A2.363 2.363 0 0 1 5 2.64h16v.72H5c-.904 0-1.64.736-1.64 1.64v16Zm24-15h-.72V3.36H24v-.72h2.64V0h.721v2.64H30v.72h-2.64V6Z" fill="#000"/></svg>');
-$icon__cloud-upload: url('image/svg+xml;utf8,<svg width="31" height="27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24.763 18.9c3.04 0 5.511-2.47 5.511-5.507 0-2.89-2.253-5.307-5.13-5.504a.364.364 0 0 1-.338-.344 7.188 7.188 0 0 0-7.178-6.82 7.226 7.226 0 0 0-6.516 4.155.364.364 0 0 1-.467.183 7.154 7.154 0 0 0-2.732-.54C3.951 4.523.727 7.752.727 11.72c0 3.608 2.668 6.692 6.205 7.175.198.026.338.21.31.408a.355.355 0 0 1-.41.311C2.939 19.085 0 15.691 0 11.721c0-4.37 3.55-7.925 7.912-7.925.923 0 1.826.159 2.692.473A7.955 7.955 0 0 1 17.626 0a7.915 7.915 0 0 1 7.881 7.195C28.612 7.566 31 10.23 31 13.394c.001 3.436-2.797 6.233-6.237 6.233l-.098-.005c-.197-.015-.376-.184-.366-.381.01-.194.142-.348.334-.348h.008l.122.007Z" fill="#000"/><path d="M15.864 26.6h-.726V10.322l-5.435 5.435-.513-.514 6.311-6.311 6.312 6.31-.515.515-5.434-5.435V26.6Z" fill="#000"/></svg>');
-$icon__cloud-download: url('image/svg+xml;utf8,<svg width="31" height="29" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24.66 18.814a5.484 5.484 0 0 0 5.474-5.481c0-2.877-2.238-5.283-5.095-5.479a.363.363 0 0 1-.336-.342A7.155 7.155 0 0 0 17.557.723a7.192 7.192 0 0 0-6.485 4.136.362.362 0 0 1-.465.18 7.116 7.116 0 0 0-2.719-.537c-3.95 0-7.165 3.215-7.165 7.165 0 3.59 2.66 6.661 6.188 7.141a.36.36 0 0 1 .31.407.358.358 0 0 1-.408.31C2.928 18.995 0 15.617 0 11.666 0 7.317 3.539 3.78 7.888 3.78c.918 0 1.818.158 2.678.47A7.918 7.918 0 0 1 17.556 0a7.88 7.88 0 0 1 7.847 7.162c3.084.37 5.456 3.02 5.456 6.17 0 3.422-2.781 6.207-6.2 6.207a3.24 3.24 0 0 1-.098-.005c-.195-.015-.374-.184-.363-.38.01-.196.125-.366.339-.347l.123.007Z" fill="#000"/><path d="m15.43 29-6.283-6.282.51-.512 5.41 5.41V11.412h.724v16.204l5.409-5.41.512.512L15.43 29Z" fill="#000"/></svg>');
-$icon__delete: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.504 31A4.495 4.495 0 0 1 0 26.492c0-1.208.467-2.34 1.316-3.189l7.805-7.805-7.805-7.805A4.477 4.477 0 0 1 0 4.504c0-1.208.467-2.34 1.316-3.188A4.475 4.475 0 0 1 4.504 0c1.208 0 2.34.467 3.189 1.316l7.806 7.805 7.804-7.804A4.477 4.477 0 0 1 26.492 0a4.48 4.48 0 0 1 3.19 1.316 4.515 4.515 0 0 1 0 6.377l-7.806 7.804 7.805 7.805a4.516 4.516 0 0 1 0 6.378 4.516 4.516 0 0 1-6.378 0l-7.805-7.806-7.805 7.806A4.49 4.49 0 0 1 4.504 31Zm0-30.274A3.756 3.756 0 0 0 1.83 1.83 3.76 3.76 0 0 0 .726 4.504c0 1.014.392 1.964 1.103 2.675l8.057 8.057a.369.369 0 0 1 .005.519L1.83 23.818a3.753 3.753 0 0 0-1.103 2.674 3.76 3.76 0 0 0 1.103 2.675 3.785 3.785 0 0 0 5.35 0l8.062-8.062a.362.362 0 0 1 .514 0l8.063 8.062a3.787 3.787 0 0 0 5.35 0 3.787 3.787 0 0 0 0-5.35l-8.062-8.063a.362.362 0 0 1 0-.514l8.062-8.062a3.787 3.787 0 0 0 0-5.35A3.764 3.764 0 0 0 26.493.726a3.753 3.753 0 0 0-2.674 1.103l-8.063 8.062a.362.362 0 0 1-.514 0L7.18 1.83A3.763 3.763 0 0 0 4.504.726Z" fill="#000"/></svg>');
-$icon__do-not-2: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 31C6.953 31 0 24.047 0 15.5S6.953 0 15.5 0 31 6.953 31 15.5 24.047 31 15.5 31ZM4.804 5.319A14.72 14.72 0 0 0 .727 15.5c0 8.146 6.626 14.773 14.773 14.773 3.943 0 7.53-1.552 10.182-4.077L4.804 5.319Zm.515-.515 20.877 20.878A14.722 14.722 0 0 0 30.273 15.5C30.273 7.353 23.647.727 15.5.727A14.72 14.72 0 0 0 5.319 4.804Z" fill="#000"/></svg>');
-$icon__download-1: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30.636 30.636H.363A.363.363 0 0 1 0 30.273V22.2h.727v7.71h29.546V22.2H31v8.073a.365.365 0 0 1-.364.363Z" fill="#000"/><path d="m15.5 22.713-6.311-6.31.512-.514 5.435 5.434V0h.727v21.323l5.434-5.434.514.514-6.312 6.31Z" fill="#000"/></svg>');
-$icon__export-2: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30.489 31H.362A.361.361 0 0 1 0 30.639V11.558c0-.2.162-.362.362-.362h8.033v.723H.723v18.358h29.404V11.919h-7.672v-.723h8.034c.2 0 .361.162.361.362v19.08c0 .2-.161.362-.361.362Z" fill="#000"/><path d="M15.787 24.613h-.723V1.383l-5.41 5.409-.51-.51L15.426 0l6.282 6.282-.512.51-5.408-5.408v23.229Z" fill="#000"/></svg>');
-$icon__export-1: url('image/svg+xml;utf8,<svg width="13" height="23" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.758 23h-.735V1.408L.519 6.911 0 6.39 6.39 0l6.392 6.391-.521.52-5.503-5.503V23Z" fill="#000"/></svg>');
-$icon__embed: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M26.692 30.999H2.39A2.393 2.393 0 0 1 0 28.609V4.307a2.393 2.393 0 0 1 2.39-2.39h13.163v.73H2.39c-.916 0-1.66.745-1.66 1.66V28.61c0 .916.744 1.66 1.66 1.66h24.302c.915 0 1.66-.743 1.66-1.66V15.446h.73v13.163a2.393 2.393 0 0 1-2.39 2.39Zm-4.05-13.163h-9.478V8.357h.729v8.233L30.483 0 31 .515 14.408 17.106h8.233v.73Z" fill="#000"/></svg>');
-$icon__download-2: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30.637 30.637H.363A.363.363 0 0 1 0 30.273V11.1c0-.2.162-.363.363-.363h8.073v.727H.726V29.91h29.547V11.464h-7.71v-.727h8.074c.2 0 .363.162.363.363v19.173a.364.364 0 0 1-.363.364Z" fill="#000"/><path d="m15.5 24.732-6.311-6.31.513-.515 5.435 5.435V0h.726v23.342l5.434-5.435.515.514-6.312 6.311Z" fill="#000"/></svg>');
-$icon__do-not: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 31C6.953 31 0 24.046 0 15.5S6.954 0 15.5 0 31 6.953 31 15.5 24.047 31 15.5 31Zm0-30.273C7.354.727.727 7.353.727 15.5c0 8.146 6.626 14.773 14.773 14.773 8.146 0 14.772-6.626 14.772-14.773C30.273 7.353 23.646.727 15.5.727Zm5.032 22.2a2.383 2.383 0 0 1-1.695-.7L15.5 18.89l-3.338 3.339c-.902.904-2.488.902-3.39 0a2.381 2.381 0 0 1-.7-1.696c0-.641.25-1.243.7-1.695L12.11 15.5l-3.338-3.338a2.398 2.398 0 0 1 0-3.389 2.4 2.4 0 0 1 3.39 0L15.5 12.11l3.337-3.337c.904-.903 2.489-.902 3.39 0 .45.451.7 1.053.7 1.694 0 .642-.25 1.244-.7 1.696L18.89 15.5l3.338 3.338c.45.451.7 1.053.7 1.695 0 .643-.25 1.244-.7 1.696a2.374 2.374 0 0 1-1.696.698ZM15.5 18.012c.097 0 .189.038.256.106l3.595 3.594c.628.63 1.736.629 2.361 0 .315-.314.488-.733.488-1.18a1.66 1.66 0 0 0-.488-1.181l-3.594-3.596a.362.362 0 0 1 0-.513l3.594-3.595c.315-.314.488-.733.488-1.18a1.66 1.66 0 0 0-.488-1.181c-.625-.627-1.733-.63-2.361 0l-3.595 3.594a.362.362 0 0 1-.513 0l-3.595-3.594c-.628-.629-1.735-.628-2.362 0a1.672 1.672 0 0 0 0 2.362l3.594 3.595a.362.362 0 0 1 0 .513l-3.594 3.596a1.658 1.658 0 0 0-.487 1.18c0 .448.173.867.487 1.181.627.628 1.734.629 2.362 0l3.595-3.594a.364.364 0 0 1 .257-.107Z" fill="#000"/></svg>');
-$icon__minimize: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m30.48 30.999-9.535-9.536v8.26h-.731v-9.51h9.51v.733h-8.261l9.536 9.536-.518.517Zm-29.963 0L0 30.481l9.535-9.536h-8.26v-.731h9.51v9.51h-.731v-8.261L.517 30.999Zm29.207-20.214h-9.51v-9.51h.732v8.261L30.482.001 31 .518l-9.536 9.537h8.26v.73Zm-18.939 0h-9.51v-.731h8.261L.001.517.518 0l9.537 9.535v-8.26h.731v9.51Z" fill="#000"/></svg>');
-$icon__launch: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M26.6 31H2.382A2.385 2.385 0 0 1 0 28.619V4.399a2.385 2.385 0 0 1 2.382-2.38H15.5v.726H2.382c-.913 0-1.655.742-1.655 1.655v24.218c0 .913.742 1.655 1.655 1.655H26.6c.912 0 1.655-.741 1.655-1.654V15.5h.728v13.119A2.385 2.385 0 0 1 26.6 31ZM13.738 17.776l-.514-.515L29.76.727h-8.205V0H31v9.445h-.727V1.24L13.738 17.776Z" fill="#000"/></svg>');
-$icon__maximize: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30.999 30.999h-9.445v-.726h8.205l-9.471-9.47.514-.515 9.47 9.47v-8.204H31v9.445h-.001Zm-21.554 0H0v-9.445h.727v8.205l9.47-9.471.514.514-9.47 9.47h8.204V31ZM20.802 10.71l-.514-.513 9.47-9.471h-8.204V0h9.445v9.445h-.726V1.24l-9.47 9.47Zm-10.604 0L.727 1.24v8.205H0V0h9.445v.727H1.24l9.47 9.47-.512.513Z" fill="#000"/></svg>');
-$icon__love: url('image/svg+xml;utf8,<svg width="31" height="27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 26.734a.363.363 0 0 1-.258-.106L2.358 13.744A7.982 7.982 0 0 1 0 8.064C0 5.906.837 3.88 2.358 2.358A8.003 8.003 0 0 1 8.048 0h.002a8 8 0 0 1 5.694 2.358l1.755 1.756 1.756-1.756A7.999 7.999 0 0 1 22.948 0h.008a8.003 8.003 0 0 1 5.686 2.358A8 8 0 0 1 31 8.051a8 8 0 0 1-2.358 5.693L15.757 26.628a.365.365 0 0 1-.258.106ZM8.05.727h-.002a7.276 7.276 0 0 0-5.175 2.146A7.29 7.29 0 0 0 .727 8.064c0 1.948.762 3.783 2.146 5.165L15.5 25.856l12.626-12.627a7.274 7.274 0 0 0 2.145-5.178 7.274 7.274 0 0 0-2.145-5.178 7.28 7.28 0 0 0-5.17-2.146h-.009a7.27 7.27 0 0 0-5.178 2.146l-2.013 2.013a.364.364 0 0 1-.515 0l-2.013-2.013A7.27 7.27 0 0 0 8.05.727Z" fill="#000"/></svg>');
-$icon__paperclip: url('image/svg+xml;utf8,<svg width="31" height="21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.198 20.458h-.055a4.221 4.221 0 0 1-3.58-2.1A4.21 4.21 0 0 1 0 16.306a4.206 4.206 0 0 1 2.1-3.682L22.674.744a5.507 5.507 0 0 1 2.936-.74 5.518 5.518 0 0 1 4.646 2.773 5.53 5.53 0 0 1 .742 2.933 5.52 5.52 0 0 1-2.774 4.649l-16.798 9.698-.364-.628 16.8-9.699a4.803 4.803 0 0 0 2.411-4.042 4.823 4.823 0 0 0-.646-2.547A4.799 4.799 0 0 0 25.59.73a4.718 4.718 0 0 0-2.551.644L2.464 13.252a3.479 3.479 0 0 0-1.737 3.046c.006.593.167 1.18.466 1.698a3.49 3.49 0 0 0 2.96 1.735c.625.054 1.241-.15 1.783-.465l15.819-9.133a2.127 2.127 0 0 0 1.06-1.823 2.103 2.103 0 0 0-.284-1.073 2.104 2.104 0 0 0-1.788-1.06 2.068 2.068 0 0 0-1.107.284L7.592 13.413l-.363-.628L19.273 5.83a2.853 2.853 0 0 1 1.486-.38c1.002.022 1.9.554 2.4 1.422.255.44.387.938.383 1.442a2.856 2.856 0 0 1-1.424 2.445l-15.82 9.134a4.196 4.196 0 0 1-2.1.564Z" fill="#000"/></svg>');
-$icon__upload-2: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30.637 19.9h-8.073v-.727h7.71V.727H.726v18.446h7.71v.728H.362A.363.363 0 0 1 0 19.538V.363C0 .163.162 0 .363 0h30.274c.2 0 .363.162.363.363v19.174c0 .2-.163.363-.363.363Z" fill="#000"/><path d="M15.863 30.637h-.726V7.295l-5.435 5.434-.513-.513L15.5 5.904l6.312 6.312-.515.513-5.434-5.434v23.342Z" fill="#000"/></svg>');
-$icon__player-flow: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M25.59 30.998a5.417 5.417 0 0 1-5.396-5.045h-7.62l-4.96 2.975a.364.364 0 0 1-.55-.311v-2.664h-1.15A5.92 5.92 0 0 1 0 20.04a5.92 5.92 0 0 1 5.913-5.914h6.458l4.959-2.975a.364.364 0 0 1 .55.312v2.663h7.206a5.193 5.193 0 0 0 5.187-5.186 5.193 5.193 0 0 0-5.187-5.187h-2.422l-4.959 2.976a.364.364 0 0 1-.55-.312V3.753H5.51L.55 6.729A.364.364 0 0 1 0 6.417V.363A.361.361 0 0 1 .55.052l4.96 2.975h11.644V.363a.365.365 0 0 1 .55-.31l4.96 2.974h2.422a5.92 5.92 0 0 1 5.913 5.913 5.92 5.92 0 0 1-5.913 5.913H17.88v2.664a.363.363 0 0 1-.551.31l-4.959-2.974H5.913A5.193 5.193 0 0 0 .727 20.04a5.193 5.193 0 0 0 5.186 5.186h1.15v-2.664a.363.363 0 0 1 .55-.31l4.96 2.974h7.622a5.416 5.416 0 0 1 5.396-5.045A5.415 5.415 0 0 1 31 25.59a5.416 5.416 0 0 1-5.41 5.408Zm0-10.09a4.687 4.687 0 0 0-4.682 4.682c0 2.582 2.1 4.682 4.682 4.682 2.583 0 4.683-2.1 4.683-4.682 0-2.583-2.1-4.683-4.683-4.683ZM7.79 25.59v2.385l3.976-2.385-3.976-2.386v2.386Zm5.389-11.1 3.975 2.385v-4.772L13.18 14.49Zm4.702-11.1v2.385l3.976-2.385-3.976-2.386V3.39ZM.727 1.004v4.772L4.702 3.39.727 1.004Zm23.602 26.967a.365.365 0 0 1-.364-.364V23.57a.364.364 0 0 1 .544-.315l3.531 2.018a.363.363 0 0 1 0 .63l-3.53 2.017a.339.339 0 0 1-.18.05Zm.363-3.774v2.785l2.436-1.392-2.436-1.393Z" fill="#000"/></svg>');
-$icon__reset: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 30.999c-8.547 0-15.5-6.953-15.5-15.5C0 6.954 6.953 0 15.5 0c4.57 0 8.796 1.95 11.745 5.384V.364h.728V6.78h-6.419v-.727h5.307C24.042 2.66 19.94.727 15.499.727 7.353.727.727 7.353.727 15.499s6.626 14.774 14.772 14.774 14.774-6.627 14.774-14.774H31C30.999 24.047 24.046 31 15.5 31Z" fill="#000"/></svg>');
-$icon__upload-1: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M31 8.436h-.727V.726H.727v7.71H0V.363C0 .163.162 0 .363 0h30.274c.2 0 .363.162.363.363v8.073Z" fill="#000"/><path d="M15.863 30.637h-.726V9.313l-5.435 5.434-.513-.512L15.5 7.923l6.312 6.312-.515.512-5.434-5.434v21.324Z" fill="#000"/></svg>');
-$icon__trash: url('image/svg+xml;utf8,<svg width="28" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 30.72H4a.36.36 0 0 1-.36-.36V4.72H0V4h8.64V.36A.36.36 0 0 1 9 0h10a.36.36 0 0 1 .36.36V4H28v.72h-3.64v25.64a.36.36 0 0 1-.36.36ZM4.36 30h19.28V4.72H4.36V30Zm5-26h9.28V.72H9.36V4Z" fill="#000"/><path d="M19 26.72a.36.36 0 0 1-.36-.36v-18a.36.36 0 1 1 .72 0v18a.36.36 0 0 1-.36.36Zm-5 0a.36.36 0 0 1-.36-.36v-18a.36.36 0 1 1 .72 0v18a.36.36 0 0 1-.36.36Zm-5 0a.36.36 0 0 1-.36-.36v-18a.36.36 0 1 1 .72 0v18a.36.36 0 0 1-.36.36Z" fill="#000"/></svg>');
-$icon__refresh: url('image/svg+xml;utf8,<svg width="29" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M26.617 30.913H2.383A2.386 2.386 0 0 1 0 28.529V15.403h.727v13.126c0 .913.743 1.656 1.656 1.656h24.234c.913 0 1.656-.742 1.656-1.655V8.333c0-.912-.742-1.656-1.656-1.656H6.29l5.437 5.439-.514.514-6.315-6.316L11.214 0l.514.514L6.29 5.951h20.327A2.385 2.385 0 0 1 29 8.334V28.53a2.385 2.385 0 0 1-2.383 2.384Z" fill="#000"/></svg>');
-$icon__renew: url('image/svg+xml;utf8,<svg width="31" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.5 30.999c-4.572 0-8.797-1.95-11.746-5.386v5.023h-.727v-6.418h6.418v.727H4.14c2.818 3.395 6.917 5.328 11.36 5.328 8.145 0 14.773-6.627 14.773-14.774H31C30.999 24.047 24.046 31 15.5 31ZM.726 15.499H0C0 6.954 6.953 0 15.5 0c4.57 0 8.796 1.95 11.745 5.385V.363h.728v6.418h-6.419v-.727h5.305A14.656 14.656 0 0 0 15.499.727C7.353.727.727 7.353.727 15.499Z" fill="#000"/></svg>');
-$icon__repeat: url('image/svg+xml;utf8,<svg width="32" height="31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.323 31 0 26.677l4.323-4.324.518.518-3.44 3.44h27.566c.918 0 1.666-.747 1.666-1.666V15.5h.733v9.145a2.4 2.4 0 0 1-2.398 2.397H1.4l3.44 3.44-.517.518ZM.883 15.5H.151V6.355A2.401 2.401 0 0 1 2.55 3.958h27.567l-3.44-3.44.518-.518 4.322 4.323-4.322 4.323-.518-.518 3.44-3.44H2.549A1.67 1.67 0 0 0 .883 6.355V15.5Z" fill="#000"/></svg>');
-$distance__near: 0, 8px, 16px, 0, #00001a;
-$distance__med: 0, 16px, 32px, 0, #000026;
-$distance__far: 0, 32px, 64px, 0, #000026;
-$-cobalt_token_modes: (
+$__token-values: (
+  "color.black": (
+    default: (#00193f),
+  ),
+  "color.blue": (
+    default: (#2b3faa),
+  ),
+  "color.dark-gray": (
+    default: (#282a37),
+  ),
+  "color.green": (
+    default: (#77cd8f),
+  ),
+  "color.purple": (
+    default: (#6a35d9),
+  ),
+  "color.red": (
+    default: (#f6566a),
+  ),
+  "color.white": (
+    default: (#ffffff),
+  ),
+  "gradient.red": (
+    default: (#d0323a, #fd8d4e 100%),
+  ),
+  "typography.heading-1": (
+    default: (regular 500 36px/1 "PP Neue Montreal"),
+  ),
+  "typography.heading-2": (
+    default: (regular 500 28px/1 "PP Neue Montreal"),
+  ),
+  "typography.heading-3": (
+    default: (regular 500 24px/1 "PP Neue Montreal"),
+  ),
+  "typography.body": (
+    default: (regular 400 16px/1 "PP Neue Montreal"),
+  ),
+  "icon.crop": (
+    default: (url('./icon/crop.svg')),
+  ),
+  "icon.cloud-upload": (
+    default: (url('./icon/cloud-upload.svg')),
+  ),
+  "icon.cloud-download": (
+    default: (url('./icon/cloud-download.svg')),
+  ),
+  "icon.delete": (
+    default: (url('./icon/delete.svg')),
+  ),
+  "icon.do-not-2": (
+    default: (url('./icon/do-not-2.svg')),
+  ),
+  "icon.download-1": (
+    default: (url('./icon/download-1.svg')),
+  ),
+  "icon.export-2": (
+    default: (url('./icon/export-2.svg')),
+  ),
+  "icon.export-1": (
+    default: (url('./icon/export-1.svg')),
+  ),
+  "icon.embed": (
+    default: (url('./icon/embed.svg')),
+  ),
+  "icon.download-2": (
+    default: (url('./icon/download-2.svg')),
+  ),
+  "icon.do-not": (
+    default: (url('./icon/do-not.svg')),
+  ),
+  "icon.minimize": (
+    default: (url('./icon/minimize.svg')),
+  ),
+  "icon.launch": (
+    default: (url('./icon/launch.svg')),
+  ),
+  "icon.maximize": (
+    default: (url('./icon/maximize.svg')),
+  ),
+  "icon.love": (
+    default: (url('./icon/love.svg')),
+  ),
+  "icon.paperclip": (
+    default: (url('./icon/paperclip.svg')),
+  ),
+  "icon.upload-2": (
+    default: (url('./icon/upload-2.svg')),
+  ),
+  "icon.player-flow": (
+    default: (url('./icon/player-flow.svg')),
+  ),
+  "icon.reset": (
+    default: (url('./icon/reset.svg')),
+  ),
+  "icon.upload-1": (
+    default: (url('./icon/upload-1.svg')),
+  ),
+  "icon.trash": (
+    default: (url('./icon/trash.svg')),
+  ),
+  "icon.refresh": (
+    default: (url('./icon/refresh.svg')),
+  ),
+  "icon.renew": (
+    default: (url('./icon/renew.svg')),
+  ),
+  "icon.repeat": (
+    default: (url('./icon/repeat.svg')),
+  ),
+  "distance.near": (
+    default: (0, 8px, 16px, 0, #00001a),
+  ),
+  "distance.med": (
+    default: (0, 16px, 32px, 0, #000026),
+  ),
+  "distance.far": (
+    default: (0, 32px, 64px, 0, #000026),
+  ),
 );
-@mixin typography__heading-1 {
-  font-family: "PP Neue Montreal";
-  font-size: 36px;
-  font-style: regular;
-  font-weight: 500;
-  letter-spacing: 0em;
-  line-height: 1;
-}
-@mixin typography__heading-2 {
-  font-family: "PP Neue Montreal";
-  font-size: 28px;
-  font-style: regular;
-  font-weight: 500;
-  letter-spacing: 0em;
-  line-height: 1;
-}
-@mixin typography__heading-3 {
-  font-family: "PP Neue Montreal";
-  font-size: 24px;
-  font-style: regular;
-  font-weight: 500;
-  letter-spacing: 0em;
-  line-height: 1;
-}
-@mixin typography__body {
-  font-family: "PP Neue Montreal";
-  font-size: 16px;
-  font-style: regular;
-  font-weight: 400;
-  letter-spacing: 0em;
-  line-height: 1;
-}
 
-@function mode($token, $modeName) {
-  $mode: map.get($-cobalt_token_modes, $token);
-  @return map.get($mode, $modeName);
+@function token($tokenName, $modeName: default) {
+  @if map.has-key($__token-values, $tokenName) == false {
+    @error "No token named \"#{$tokenName}\"";
+  }
+  $_token: map.get($__token-values, $tokenName);
+  @if map.has-key($_token, $modeName) {
+    @return map.get($_token, $modeName);
+  } @else {
+    @return map.get($_token, default);
+  }
 }
