--- a/packages/plugin-css/test/fixtures/color/want.css
+++ b/packages/plugin-css/test/fixtures/color/want.css
@@ -1,3 +1,8 @@
+/**
+ * This file was auto-generated from tokens.json.
+ * DO NOT EDIT!
+ */
+
 :root {
   --color-blue: #218bff;
   --color-blue-p3: color(display-p3 0.12941 0.5451 1);
