--- a/examples/github/tokens/index.scss
+++ b/examples/github/tokens/index.scss
@@ -1,3 +1,7 @@
+// GitHub Primer Design System
+// This file was auto-generated from tokens.json.
+// DO NOT EDIT!
+
 @use "sass:map";
 
 $__token-values: (
@@ -2330,7 +2334,7 @@ $__token-values: (
     default: (url('../icon/zap-24.svg')),
   ),
   "spacing.spacer_0": (
-    default: (0px),
+    default: (0),
   ),
   "spacing.spacer_xs": (
     default: (4px),
