--- a/packages/plugin-sass/test/fixtures/basic/want.scss
+++ b/packages/plugin-sass/test/fixtures/basic/want.scss
@@ -10,7 +10,7 @@ $__token-values: (
     "dark": (#56d364),
   ),
   "gradient.g-b": (
-    default: (#00ff00, #0000ff 100%),
+    default: (#00ff00 0%, #0000ff 100%),
   ),
   "typography.family.body": (
     default: ("IBM Plex Sans", -system-ui, sans-serif),
