--- a/examples/github/tokens/index.scss
+++ b/examples/github/tokens/index.scss
@@ -2414,14 +2414,34 @@ $__token-values: (
   ),
 );
 
+$__token-typography-mixins: (
+);
+
 @function token($tokenName, $modeName: default) {
   @if map.has-key($__token-values, $tokenName) == false {
     @error "No token named \"#{$tokenName}\"";
   }
   $_token: map.get($__token-values, $tokenName);
+  @if map.has-key($_token, "__cobalt-error") {
+    @error map.get($_token, "__cobalt-error");
+  }
   @if map.has-key($_token, $modeName) {
     @return map.get($_token, $modeName);
   } @else {
     @return map.get($_token, default);
+  }
+}
+
+@mixin typography($tokenName, $modeName: default) {
+  @if map.has-key($__token-typography-mixins, $tokenName) == false {
+    @error "No typography mixin named \"#{$tokenName}\"";
+  }
+  $_mixin: map.get($__token-typography-mixins, $tokenName);
+  $_properties: map.get($_token, default);
+  @if map.has-key($_token, $modeName) {
+    $_properties: map.get($_token, $modeName);
+  }
+  @each $_property, $_value in $_properties {
+    #{$_property}: #{$_value};
   }
 }
