--- a/examples/adobe/tokens/tokens.css
+++ b/examples/adobe/tokens/tokens.css
@@ -85,7 +85,7 @@
   --font-size-1300: 60px;
 }
 
-@media (color-gamut: p3) {
+@supports (color: color(display-p3 1 1 1)) {
   :root {
     --color-blue-400: color(display-p3 0.14902 0.50196 0.92157);
     --color-blue-500: color(display-p3 0.07843 0.45098 0.90196);
